@@ -220,7 +220,9 @@
     var fetchUrl = "{{ fetchUrl }}";
     var id = '#{{ id }}';
     var minLength = {{ minLength }};
+    var autoSubmit = {{ autoSubmit }};
     var displayValue = '{{ displayValue }}';
+    var handlebar = '{{ handlebar|raw }}';
 </script>
 <script type="text/javascript" src="{{ asset('bundles/clubformextra/js/handlebars-v2.0.0.js') }}"></script>
 <script type="text/javascript" src="{{ asset('bundles/clubformextra/js/typeahead.bundle.js') }}"></script>
